--- a/qweb/src/Gallery.css
+++ b/qweb/src/Gallery.css
@@ -1,20 +1,54 @@
- /* Dashed border */
- hr.dashed {
-    border-top: 3px dashed #bbb;
-  }
-  
-  /* Dotted border */
-  hr.dotted {
-    border-top: 3px dotted #bbb;
-  }
-  
-  /* Solid border */
-  hr.solid {
-    border-top: 3px solid #bbb;
-  }
-  
-  /* Rounded border */
-  hr.rounded {
-    border-top: 8px solid #bbb;
-    border-radius: 5px;
-  } 
+hr.solid {
+  border-top: 3px solid #bbb;
+}
+
+.years-button{
+  background-color: #f2f2f2;
+}
+
+.years-button:hover{
+  background-color: var(--color-gainsboro);
+  border: 3px solid var(--color-lightslategray-100);
+  box-sizing: border-box;
+}
+
+.years-button:focus{
+  background-color: var(--color-slategray);
+  border: 3px solid var(--color-lightslategray-100);
+  box-sizing: border-box;
+  color:white;
+}
+
+.events-button{
+  background-color: #f2f2f2;
+}
+
+.events-button:hover{
+  background-color: var(--color-gainsboro);
+  border: 3px solid var(--color-lightslategray-100);
+  box-sizing: border-box;
+}
+
+.events-button:focus{
+  background-color: var(--color-slategray);
+  border: 3px solid var(--color-lightslategray-100);
+  box-sizing: border-box;
+  color:white;
+}
+
+.years-container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.event-desc-container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-color: #CDC3D8;
+}
+
+.event-desc {
+  font-size: 32px;
+}
