--- a/qweb/src/Contact.css
+++ b/qweb/src/Contact.css
@@ -1,4 +1,21 @@
+html {
+    height: 100%;
+    margin: 0;
+}
+
+.Contact {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    flex: 1;
+}
+
 body {
+    height: 100%;
+    margin: 0;
     background: linear-gradient(#F2F2F2,  #CBC3E1);
     background-attachment: fixed;
     justify-content: center;
@@ -124,4 +141,8 @@ p {
     justify-content: flex-end;
     display: flex;
     margin-left: 349px;
+}
+
+footer {
+    text-align: center;
 }
