--- a/qweb/src/Footer.css
+++ b/qweb/src/Footer.css
@@ -5,9 +5,11 @@ footer {
     justify-content: center;
     align-items: center;
     padding: auto;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
+    height: 125px;
+    margin-top: auto;
   }
   
   footer a {
