--- a/qweb/src/Header.css
+++ b/qweb/src/Header.css
@@ -1,3 +1,5 @@
+
+
 .header{
     background-color: #1A1A1A;
     color: white;
@@ -17,6 +19,7 @@
 }
 
 .hamburger{
+    cursor: pointer;
     display: none;
     justify-content: left;
     align-items: left;
