--- a/qweb/src/Gallery.css
+++ b/qweb/src/Gallery.css
@@ -91,7 +91,7 @@ hr.solid {
   font-size: 30px;
 }
 
-h1 {
+.h1 {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #1A1A1A;
   font-size: 50px;
@@ -100,4 +100,29 @@ h1 {
   display: flex;
   font-weight: 700;
   padding-top: 20Px;
+}
+
+.belowbanner{
+  align-items: center;
+  align-self: center;
+  align-content: center;
+}
+
+.rectangle-parent1 {
+  position: absolute;
+  /* top: 0; */
+  /* left: 0; */
+  align-self: center;
+  background-color: #353232;
+  width: 505px;
+  flex-direction: column;
+  align-items: center;
+  padding: 47px 20px 47px 22px;
+  box-sizing: border-box;
+  gap: var(--gap-5xl);
+  max-width: 100%;
+}
+
+.art-title{
+  
 }
