--- a/qweb/src/Contact.css
+++ b/qweb/src/Contact.css
@@ -1,7 +1,3 @@
-html {
-    height: 100%;
-    margin: 0;
-}
 
 .Contact {
     display: flex;
@@ -9,29 +5,6 @@ html {
     min-height: 100vh;
 }
 
-.content {
-    flex: 1;
-}
-
-body {
-    height: 100%;
-    margin: 0;
-    background: linear-gradient(#F2F2F2,  #CBC3E1);
-    background-attachment: fixed;
-    justify-content: center;
-    align-items: center;
-}
-
-h1 {
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: #1A1A1A;
-    font-size: 50px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    font-weight: 700;
-    padding-top: 20Px;
-}
 
 .row {
     display: flex;
@@ -41,18 +14,6 @@ h1 {
     column-gap: 100px;
 }
 
-.box {
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.container {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-}
 
 .logo_link {
     width: 300px;
@@ -89,7 +50,7 @@ h1 {
     row-gap: 30px;
 }
 
-img {
+.contact_img {
     height: auto;
     width: auto;
     max-width: 90px;
@@ -97,22 +58,6 @@ img {
     padding: 10px 10px;
 }
 
-h2 {
-    font-weight: 700;
-    display: flex;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: #1A1A1A;
-    font-size: 32px;
-
-}
-
-p {
-    display: flex;
-    font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: #1A1A1A;
-    font-size: 21px;
-    font-weight: 500;
-}
 
 .submit-btn {
     background-color: #1A1A1A;
@@ -143,6 +88,3 @@ p {
     margin-left: 349px;
 }
 
-footer {
-    text-align: center;
-}
