--- a/qweb/src/Contact.css
+++ b/qweb/src/Contact.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: row;
+    flex-direction: row;
     column-gap: 100px;
 }
 
@@ -88,3 +88,23 @@
     margin-left: 349px;
 }
 
+@media screen and (max-width: 800px){
+    .inputFields, .button-div {
+        align-items: center;
+        margin: 0px;
+        justify-content: center;
+        display: flex;
+
+    }
+
+    .row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-bottom: 60px;
+    }
+    
+
+}
