--- a/qweb/src/Contact.css
+++ b/qweb/src/Contact.css
@@ -1,41 +1,19 @@
-body {
-    background: linear-gradient(#F2F2F2,  #CBC3E1);
-    background-attachment: fixed;
-    justify-content: center;
-    align-items: center;
+
+.Contact {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-h1 {
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: #1A1A1A;
-    font-size: 50px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    font-weight: 700;
-    padding-top: 20Px;
-}
 
 .row {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: row;
+    flex-direction: row;
     column-gap: 100px;
 }
 
-.box {
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.container {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-}
 
 .logo_link {
     width: 300px;
@@ -72,7 +50,7 @@ h1 {
     row-gap: 30px;
 }
 
-img {
+.contact_img {
     height: auto;
     width: auto;
     max-width: 90px;
@@ -80,21 +58,55 @@ img {
     padding: 10px 10px;
 }
 
-h2 {
-    font-weight: 700;
-    display: flex;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: #1A1A1A;
-    font-size: 32px;
 
+.submit-btn {
+    background-color: #1A1A1A;
+    color: white;
+    font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 23px;
+    font-weight: 200;
+    display: flex;
+    max-width: fit-content;
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    border-radius: 10px;
 }
 
-p {
+.submit-btn:hover {
+    background-color: #766B94;
+}
+
+.submit-btn:active {
+    background-color: #5a5274;
+}
+
+.button-div {
+    align-items: flex-end;
+    justify-content: flex-end;
     display: flex;
-    font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: #1A1A1A;
-    font-size: 21px;
-    font-weight: 500;
+    margin-left: 349px;
+}
+
+@media screen and (max-width: 800px){
+    .inputFields, .button-div {
+        align-items: center;
+        margin: 0px;
+        justify-content: center;
+        display: flex;
+
+    }
+
+    .row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-bottom: 60px;
+    }
+    
+
 }
 
 .submit-btn {
