--- a/qweb/src/Home.css
+++ b/qweb/src/Home.css
@@ -1,3 +1,10 @@
+#LogoItem{
+  display: block;
+
+  width: 50%;
+  margin:5% auto 5% auto;
+}
+
 #LearnMoreButton{
     grid-column: 2;
     grid-row: 3;
@@ -12,6 +19,7 @@
     outline: none;
     border: none;
     border-radius: 10px;
+    margin: auto auto auto auto;
   }
   
   #LearnMoreButton:hover{
@@ -36,8 +44,10 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-    margin-left:10%;
-    margin-right:10%;
+    margin:10%;
+    background-color:gray;
+
+
 }
 
 
@@ -52,7 +62,14 @@
 }
 #LatestEventPhoto{
     grid-column: 1;
-    grid-row: 1/3;
+    grid-row: 1/4;
+    display:flex;
+    justify-content: center;
+
+}
+#LatestEventItem{
+  width:70%;
+  
 }
 
 #GalleryView{
@@ -70,36 +87,59 @@
 #GalleryItem1{
     grid-column: 1;
     grid-row: 1;
-
-    justify-content: center;
-    align-items: center;
+    width: 95%; 
+    height: 95%;
 }
 #GalleryItem2{
     grid-column: 2;
     grid-row: 1;
 
-    justify-content: center;
-    align-items: center;
+    width: 95%; 
+    height: 95%;
 }
 #GalleryItem3{
     grid-column: 3;
     grid-row: 1;
+    
+    width: 95%; 
+    height: 95%;
+}
 
-    justify-content: center;
-    align-items: center;
+
+
+.GalleryPhoto *{
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  width:300px;
+  height:300px;
+
+   
+  object-fit: cover;
+  background-color:gray;
+
+
+}
+#GalleryExtra{
+  display:grid;
+  margin-left:10%;
+  margin-right:10%;
 }
 #GalleryDescription{
-    display:grid;
-    grid-column: 1/4;
-    grid-row: 2;
-}
+  grid-row: 1;
+  grid-column: 1/4;
+margin:2% auto 2% auto;
 
+}
 #GalleryButton{
-    grid-column: 2;
-    grid-row: 3;
+  grid-row:2;
+  grid-column: 2;
+  margin: 0 0 15% 0;
 }
 #GalleryLink{
-    
+
+
     background-color: #1A1A1A;
     color: white;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -110,6 +150,7 @@
     outline: none;
     border: none;
     border-radius: 10px;
+    margin:auto;
   }
   
   #GalleryLink:hover{
@@ -124,4 +165,6 @@
     border: 3px solid var(--color-lightslategray-100);
     box-sizing: border-box;
     color:white;
+    
   }
+
