--- a/qweb/src/Home.css
+++ b/qweb/src/Home.css
@@ -1,3 +1,14 @@
+
+
+#LatestEvent{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  margin:10%;
+  background-color:lightgray;
+}
+
 #LogoItem{
   display: block;
 
@@ -13,52 +24,53 @@
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 23px;
     font-weight: 200;
-    max-width: -moz-fit-content;
-    max-width: fit-content;
-    padding: 10px 20px;
+    padding: 15px;
     outline: none;
     border: none;
     border-radius: 10px;
-    margin: auto auto auto auto;
+    width:30%;
+    
+    margin:auto
   }
   
   #LearnMoreButton:hover{
-    background-color: var(--color-gainsboro);
-    border: 3px solid var(--color-lightslategray-100);
-    box-sizing: border-box;
+    text-decoration:none;
   }
   
   #LearnMoreButton:focus{
-    background-color: var(--color-slategray);
-    border: 3px solid var(--color-lightslategray-100);
-    box-sizing: border-box;
-    color:white;
+    text-decoration:none;
   }
 
+#LearnMoreButtonItem{
+  background-color: #1A1A1A;
+  color: white;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 200;
+  width:100%;
+  padding: 15px;
 
-
-
-
-#LatestEvent{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-    margin:10%;
-    background-color:gray;
-
-
+  outline: none;
+  border: none;
+  margin:auto;
+  text-decoration: none;  
 }
+
 
 
 #LatestEventTitle{
     grid-column:2;
     grid-row:1;
 }
+#LatestEventTitleItem{
+  font-size:40px;
+}
 #LatestEventDescription{
     grid-column:2;
     grid-row:2;
 
+}
+#DescriptionItem{
+  font-size: 16px;
 }
 #LatestEventPhoto{
     grid-column: 1;
@@ -68,7 +80,8 @@
 
 }
 #LatestEventItem{
-  width:70%;
+  object-fit: cover;
+  width:90%;
   
 }
 
@@ -118,7 +131,7 @@
    
   object-fit: cover;
   background-color:gray;
-
+  border-radius: 25px;
 
 }
 #GalleryExtra{
@@ -136,35 +149,40 @@ margin:2% auto 2% auto;
   grid-row:2;
   grid-column: 2;
   margin: 0 0 15% 0;
+  background-color: #1A1A1A;
+  color: white;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 23px;
+  font-weight: 200;
+  width:100%;
+  padding: 15px;
+  outline: none;
+  border: none;
+  border-radius: 10px;
 }
 #GalleryLink{
-
-
     background-color: #1A1A1A;
     color: white;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 23px;
     font-weight: 200;
+    width:100%;
+    padding: 15px;
 
-    padding: 10px 20px;
     outline: none;
     border: none;
-    border-radius: 10px;
     margin:auto;
+    text-decoration: none; 
+
   }
+
   
   #GalleryLink:hover{
-    background-color: var(--color-gainsboro);
-    border: 3px solid var(--color-lightslategray-100);
-    box-sizing: border-box;
+    text-decoration: none; 
+
   }
   
-
   #GalleryLink:focus{
-    background-color: var(--color-slategray);
-    border: 3px solid var(--color-lightslategray-100);
-    box-sizing: border-box;
-    color:white;
-    
+    text-decoration: none; 
   }
 
