--- a/qweb/frontend/src/Gallery.css
+++ b/qweb/frontend/src/Gallery.css
@@ -23,11 +23,17 @@ hr.solid {
   box-sizing: border-box;
 }
 
-.years-button:focus{
+/* .years-button:focus{
   background-color: #766b94;
   border: 3px solid #778899;
   box-sizing: border-box;
   color:white;
+} */
+
+.years-button.focused {
+  background-color: #766b94;
+  border: 3px solid #778899;
+  color: white;
 }
 
 .years-text{
@@ -59,12 +65,12 @@ hr.solid {
   box-sizing: border-box;
 }
 
-.events-button:focus{
+/* .events-button:focus{
   background-color: #766b94;
   border: 3px solid #778899;
   box-sizing: border-box;
   color:white;
-}
+} */
 
 .events-text{
   position: relative;
@@ -144,11 +150,25 @@ p.artist{
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
+p.artist{
+  align-self: center;
+  text-align: center;
+  color: #f2f2f2;
+  font-size: 30px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
 .mediums-wrapper {
   flex-direction: row;
   text-align: center;
   padding: 0 57px 0 54px;
-  font-size: var(--font-size-5xl);
+  font-size: 30px;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  width: 211px;
+  height: 97px;
 }
