--- a/qweb/frontend/src/Home.css
+++ b/qweb/frontend/src/Home.css
@@ -1,36 +1,41 @@
 
 
 #LatestEvent{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-  margin:10%;
-  background-color:lightgray;
+  display: flex;
+  flex-direction: row;
+  column-gap: 50px;
+  background: rgba(180, 166, 198, 0.62);
+  align-items: center;
+  justify-content: center;
+  height: 650px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
+
+#LatestEventInfo{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+
 
 #LogoItem{
   display: block;
-
-  width: 50%;
-  margin:5% auto 5% auto;
+  width: 40%;
+  margin:5% auto 2% auto;
 }
 
 #LearnMoreButton{
-    grid-column: 2;
-    grid-row: 3;
     background-color: #1A1A1A;
     color: white;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-size: 23px;
+    font-size: 26px;
     font-weight: 200;
-    padding: 15px;
-    outline: none;
-    border: none;
     border-radius: 10px;
-    width:30%;
-    
-    margin:auto
+    display: flex;
+    max-width: 40%;
+    justify-content: center;
   }
   
   #LearnMoreButton:hover{
@@ -41,60 +46,94 @@
     text-decoration:none;
   }
 
-#LearnMoreButtonItem{
+#LearnMoreButton{
   background-color: #1A1A1A;
   color: white;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 200;
-  width:100%;
-  padding: 15px;
-
+  padding: 20px 40px;
+  width:auto;
   outline: none;
   border: none;
-  margin:auto;
   text-decoration: none;  
 }
 
 
 
-#LatestEventTitle{
+/* #LatestEventTitle{
     grid-column:2;
     grid-row:1;
-}
+} */
 #LatestEventTitleItem{
-  font-size:40px;
+  font-size:50px;
+  display: flex;
 }
 #LatestEventDescription{
     grid-column:2;
-    grid-row:2;
+    grid-row: 2;
 
 }
 #DescriptionItem{
-  font-size: 16px;
+  font-size: 25px;
+  justify-content: left;
+  display: flex;
+  max-width: 90%;
 }
+
 #LatestEventPhoto{
-    grid-column: 1;
-    grid-row: 1/4;
-    display:flex;
-    justify-content: center;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 
 }
+
+#TagLine{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 30px;
+}
+
+#TagLine h1{
+  font-size: 60px;
+}
+
 #LatestEventItem{
-  object-fit: cover;
-  width:90%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
   
 }
 
 #GalleryView{
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     justify-content: center;
     align-items: center;
     margin-left:10%;
-    margin-right:10%;
+    margin-right:10%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
 
+}
+
+#GalleryView p {
+  padding: 30px;
+  font-size: 23px;
+}
+
+#GalleryPhotos{
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  column-gap: 40px;
+  display: flex;
 }
 
 #GalleryItem1{
@@ -120,17 +159,11 @@
 
 
 
-.GalleryPhoto *{
-  display: flex;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-  width:300px;
-  height:300px;
-
-   
+#GalleryPhoto {
+  width:350px;
+  height:400px;
   object-fit: cover;
-  background-color:gray;
+  border: 5px solid rgb(180, 166, 198);
   border-radius: 25px;
 
 }
@@ -139,42 +172,22 @@
   margin-left:10%;
   margin-right:10%;
 }
-#GalleryDescription{
-  grid-row: 1;
-  grid-column: 1/4;
-margin:2% auto 2% auto;
 
-}
 #GalleryButton{
-  grid-row:2;
+  /* grid-row:2;
   grid-column: 2;
-  margin: 0 0 15% 0;
+  margin: 0 0 15% 0; */
   background-color: #1A1A1A;
   color: white;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 23px;
   font-weight: 200;
-  width:100%;
-  padding: 15px;
+  /* width:100%; */
+  padding: 20px 30px;
   outline: none;
   border: none;
   border-radius: 10px;
 }
-#GalleryLink{
-    background-color: #1A1A1A;
-    color: white;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-size: 23px;
-    font-weight: 200;
-    width:100%;
-    padding: 15px;
-
-    outline: none;
-    border: none;
-    margin:auto;
-    text-decoration: none; 
-
-  }
 
   
   #GalleryLink:hover{
@@ -185,4 +198,46 @@ margin:2% auto 2% auto;
   #GalleryLink:focus{
     text-decoration: none; 
   }
+
+@media screen and (max-width: 1100px){
+  #GalleryPhotos{
+    display: flex;
+    flex-direction: column;
+  }
+
+}
+
+@media screen and (max-width: 1100px){
+    #LatestEvent{
+      flex-direction: column;
+      height: auto;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #LatestEventPhoto{
+      max-height: 400px;
+      width: 100%;
+      padding-left:0%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #LatestEventItem{
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      
+    }
+
+    #LatestEventInfo{
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 30px;
+    }
+}
 
