--- a/qweb/frontend/src/main.css
+++ b/qweb/frontend/src/main.css
@@ -1,11 +1,13 @@
 html {
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 
 
 body {
     height: 100%;
+    width: 100%;
     margin: 0;
     background: linear-gradient(#F2F2F2,  #CBC3E1);
     background-attachment: fixed;
