--- a/qweb/frontend/src/Home.css
+++ b/qweb/frontend/src/Home.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   column-gap: 50px;
-  background: rgba(180, 166, 198, 0.62);
+  background: rgba(180, 166, 198, 0.80);
   align-items: center;
   justify-content: center;
   height: 650px;
@@ -32,31 +32,26 @@
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 26px;
     font-weight: 200;
+    padding: 20px 40px;
     border-radius: 10px;
     display: flex;
     max-width: 40%;
     justify-content: center;
+    width:auto;
+    outline: none;
+    border: none;
+    text-decoration: none;  
   }
   
   #LearnMoreButton:hover{
-    text-decoration:none;
+    background-color: #766B94;
+    transition: .4s;
+    transform: scale(1.05);
   }
   
-  #LearnMoreButton:focus{
-    text-decoration:none;
+  #LearnMoreButton:active{
+    background-color: #5a5274;
   }
-
-#LearnMoreButton{
-  background-color: #1A1A1A;
-  color: white;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 200;
-  padding: 20px 40px;
-  width:auto;
-  outline: none;
-  border: none;
-  text-decoration: none;  
-}
 
 
 
@@ -165,8 +160,13 @@
   object-fit: cover;
   border: 5px solid rgb(180, 166, 198);
   border-radius: 25px;
-
 }
+
+#GalleryPhoto:hover{
+  transition: .4s;
+  transform: scale(1.15);
+}
+
 #GalleryExtra{
   display:grid;
   margin-left:10%;
@@ -190,14 +190,22 @@
 }
 
   
-  #GalleryLink:hover{
-    text-decoration: none; 
+#GalleryButton:hover{
+  background-color: #766B94;
+  transition: .4s;
+  transform: scale(1.15);
 
-  }
-  
-  #GalleryLink:focus{
-    text-decoration: none; 
-  }
+}
+
+#GalleryButton:active{
+  background-color: #5a5274;
+}
+
+#Link {
+  width: 500px;
+  height: 200%;
+}
+
 
 @media screen and (max-width: 1100px){
   #GalleryPhotos{
