--- a/qweb/frontend/src/Gallery.css
+++ b/qweb/frontend/src/Gallery.css
@@ -153,3 +153,50 @@ p.mediums{
   display: flex;
   margin: 0;
 }
+
+.art-container {
+  position: relative;
+  display: flex;
+  background-color: #1A1A1A;
+  min-width: 30%;
+  max-width: 40%;
+  border: 10px solid #CDC3D8;
+  margin: 30px;
+  
+}
+
+.art-container img {
+  display: flex;
+  background-color: #1A1A1A;
+  width: 100%;
+  
+}
+
+.art-container:hover img {
+  opacity: 0.06;
+  transition: opacity 0.3s ease;
+}
+
+.art-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity:0;
+  transition: opacity 0.1s ease;
+}
+
+
+.art-container:hover .art-info {
+  opacity: 1;
+}
+
+.art-container .art-info h2,
+.art-container .art-info p {
+  color: #f2f2f2
+}
